name:                distributed-process-p2p
version:             0.1.3.2
synopsis:            Peer-to-peer node discovery for Cloud Haskell
description:         Bootstraps a peer-to-peer connection network from a set of known hosts.
homepage:            https://bitbucket.org/dpwiz/distributed-process-p2p/
license:             BSD3
license-file:        LICENSE
author:              Alexander Bondarenko
maintainer:          aenor.realm@gmail.com
copyright:           Alexander Bondarenko
category:            Network
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:
  CHANGELOG

flag build-example
  description: build "jollycloud" example which can serve as a p2p broker node.
  default: False

source-repository head
  type:     git
  location: git@bitbucket.org:dpwiz/distributed-process-p2p.git

library
  exposed-modules:     Control.Distributed.Backend.P2P
  -- other-modules:
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:
    base       ==4.*,
    mtl        >=2.1,
    bytestring >=0.9,
    containers >=0.4,
    binary     >=0.5,
    network    >=2.3,

    distributed-process   >=0.5,
    network-transport     >=0.4,
    network-transport-tcp >=0.4 && <0.6

executable jollycloud
  if !flag(build-example)
    buildable: False
  hs-source-dirs:      tests/
  main-is:             JollyCloud.hs
  ghc-options:         -threaded
  build-depends:
    base ==4.*,
    mtl,
    distributed-process,
    distributed-process-p2p
