name:                   generic-deriving
version:                1.10.4.1
synopsis:               Generic programming library for generalised deriving.
description:

  This package provides functionality for generalising the deriving mechanism
  in Haskell to arbitrary classes. It was first described in the paper:
  .
  *  /A generic deriving mechanism for Haskell/.
     Jose Pedro Magalhaes, Atze Dijkstra, Johan Jeuring, and Andres Loeh.
     Haskell'10.
  .
  The current implementation integrates with the new GHC Generics. See
  <http://www.haskell.org/haskellwiki/GHC.Generics> for more information.
  Template Haskell code is provided for supporting GHC before version 7.2.

homepage:               https://github.com/dreixel/generic-deriving
bug-reports:            https://github.com/dreixel/generic-deriving/issues
category:               Generics
copyright:              2011-2013 Universiteit Utrecht, University of Oxford
license:                BSD3
license-file:           LICENSE
author:                 José Pedro Magalhães
maintainer:             generics@haskell.org
stability:              experimental
build-type:             Simple
cabal-version:          >= 1.6
tested-with:            GHC == 7.0.4
                      , GHC == 7.2.2
                      , GHC == 7.4.2
                      , GHC == 7.6.3
                      , GHC == 7.8.4
                      , GHC == 7.10.2
                      , GHC == 8.0.1
extra-source-files:     examples/Examples.hs
                      , CHANGELOG.md
                      , README.md

source-repository head
  type: git
  location: https://github.com/dreixel/generic-deriving

library
  hs-source-dirs:       src
  exposed-modules:      Generics.Deriving
                        Generics.Deriving.Base
                        Generics.Deriving.Instances
                        Generics.Deriving.Copoint
                        Generics.Deriving.ConNames
                        Generics.Deriving.Enum
                        Generics.Deriving.Eq
                        Generics.Deriving.Foldable
                        Generics.Deriving.Functor
                        Generics.Deriving.Monoid
                        Generics.Deriving.Semigroup
                        Generics.Deriving.Show
                        Generics.Deriving.Traversable
                        Generics.Deriving.Uniplate

                        -- Generics.Deriving.TH

  other-modules:        Generics.Deriving.Base.Internal
                        -- Generics.Deriving.TH.Internal
                        Paths_generic_deriving
  -- if impl(ghc >= 7.11)
  --   other-modules:      Generics.Deriving.TH.Post711
  -- else
  --   other-modules:      Generics.Deriving.TH.Pre711

  build-depends:        base < 5
                      , containers       >= 0.1 && < 0.6
                      , template-haskell >= 2.4 && < 2.12
  if impl(ghc > 7.0)
    build-depends:      ghc-prim < 1

  ghc-options:          -Wall
